Fixed line-height so letters aren't cut off.

--- a/assets/css/v2/eink/subway_status.scss
+++ b/assets/css/v2/eink/subway_status.scss
@@ -84,7 +84,7 @@
     max-width: 1024px;
     margin-left: 24px;
     font-weight: 800;
-    line-height: 56px;
+    line-height: 65px;
     font-size: 56px;
 
     &--normal-service {
